# libirecovery-2.0

./: Makefile.am  NEWS  autogen.sh  configure.ac  libirecovery-2.0.pc.in
include/: Makefile.am
include/libirecovery/: libirecovery.h
src/: Makefile.am  libirecovery.c
tools/: Makefile.am  irecovery.c
